# waywe-rs

./: .gitignore  Cargo.toml  README.md  expand.rs
cli/: Cargo.toml
cli/src/: main.rs
crates/dxt/: Cargo.toml
crates/extractor/: Cargo.toml
crates/extractor/src/texture/: enums.rs  mod.rs
crates/video/: Cargo.toml
crates/video/src/: error.rs  hardware.rs
crates/video/src/acceleration/: ffi.rs  mod.rs
crates/wayland-scanner/: Cargo.toml
crates/wayland-scanner/src/: fmt.rs  xml.rs
crates/wayland-scanner/src/implementation/: our.rs
crates/wayland-scanner/tests/: interfaces.rs
crates/waywe/: Cargo.toml
crates/waywe-default-wallpapers/: Cargo.toml
crates/waywe-default-wallpapers/src/: image.rs  video.rs
crates/waywe-ecs/: Cargo.toml
crates/waywe-ecs/macros/: Cargo.toml
crates/waywe-ecs/macros/src/: component.rs  event.rs  lib.rs  message.rs  query_data.rs  query_filter.rs  uuid.rs
crates/waywe-ecs/src/: archetype.rs  change_detection.rs  entity_disabling.rs  hierarchy.rs  lib.rs  lifecycle.rs  name.rs  resource.rs  spawn.rs  uuid.rs
crates/waywe-ecs/src/bundle/: impls.rs  info.rs  insert.rs  mod.rs  remove.rs  spawner.rs  tests.rs
crates/waywe-ecs/src/component/: clone.rs  info.rs  mod.rs  register.rs  required.rs  tick.rs
crates/waywe-ecs/src/entity/: clone_entities.rs  entity_set.rs  hash.rs  hash_map.rs  hash_set.rs  index_map.rs  map_entities.rs  mod.rs  unique_array.rs  unique_slice.rs  unique_vec.rs
crates/waywe-ecs/src/error/: command_handling.rs  handler.rs
crates/waywe-ecs/src/event/: mod.rs  trigger.rs
crates/waywe-ecs/src/message/: message_registry.rs  messages.rs  mod.rs  update.rs
crates/waywe-event-bus/: Cargo.toml
crates/waywe-event-bus/src/: event.rs  lib.rs  path.rs
crates/waywe-ipc/: Cargo.toml
crates/waywe-ipc/src/: config.rs  epoll.rs  lib.rs  profile.rs  signals.rs
crates/waywe-uuid/: Cargo.toml
crates/waywe-uuid/examples/: derive.rs
crates/waywe-uuid/src/: lib.rs
crates/waywe-uuid/waywe-uuid-derive/: Cargo.toml
crates/waywe/src/: args.rs  command.rs  main.rs
daemon/: Cargo.toml
daemon/src/: almost.rs  app.rs  detach.rs  event.rs  event_loop.rs  hash.rs  image_pipeline.rs  main.rs  swapchain.rs  task_pool.rs  video_pipeline.rs
daemon/src/runtime/: gpu.rs  ipc.rs  mod.rs  timer.rs  video.rs  wayland.rs
daemon/src/shaders/: cyber-fuji.glsl  fire.glsl  image.glsl  rainbow-waves.glsl  transition.glsl  video-nv12.glsl  video.glsl  white-vertex.glsl
daemon/src/wallpaper/: image.rs  image_pipeline.rs  interpolation.rs  mod.rs  transition.rs  video.rs  video_pipeline.rs
daemon/src/wayland/: c_api.rs  init.rs  mod.rs  object.rs  wire.rs
daemon/tests/: simple-wayland-client.rs  simple-wayland-server.rs  white-rect.rs
daemon/tests/shaders/: white-fragment.glsl  white-vertex.glsl
dxt/: Cargo.toml  (+1 more)
extractor/: Cargo.toml  file-structure-doc.md  futaba.tex  kurukuru.tex  scene.pkg
extractor/assets/: scene.json
extractor/assets/materials/: futaba_sakura_by_greatace07-db5paq6.json
extractor/assets/models/: futaba_sakura_by_greatace07-db5paq6.json
extractor/src/: lib.rs  main.rs  package.rs
extractor/src/reader/: mod.rs  stages.rs
extractor/src/texture/: enums.rs  mod.rs  stages.rs
unite-json/: Cargo.toml  README.md  out
unite-json/assets/1307064309/: project.json
unite-json/assets/1397390712/: project.json
unite-json/assets/1780506093/: project.json  scene.pkg
unite-json/src/: main.rs
wayland/: Cargo.toml
wayland-client/: Cargo.toml
wayland-client/src/: init.rs  lib.rs  object.rs
wayland-client/src/interface/: mod.rs  registry.rs
wayland-client/src/sys/: display.rs  log.rs  mod.rs  object_storage.rs  proxy.rs  thin.rs  wire.rs
wayland-client/tests/: api.rs
wayland-scanner/: Cargo.toml
wayland-scanner/src/: implementation.rs  lib.rs  xml.rs
wayland-scanner/src/implementation/: mod.rs  our.rs  wl.rs
wayland-scanner/tests/: interfaces.rs
wayland-server/: Cargo.toml
wayland-server/src/: init.rs  lib.rs
wayland-server/src/interface/: mod.rs
wayland-sys/: Cargo.toml
wayland-sys/src/: lib.rs
wayland/src/: c_api.rs  external_wire.rs  ffi.rs  init.rs  lib.rs  object.rs  wire.rs
wayland/src/interface/: callback.rs  compositor.rs  display.rs  layer_shell.rs  layer_surface.rs  mod.rs  region.rs  registry.rs  shm.rs  shm_pool.rs  surface.rs  toplevel.rs  viewporter.rs  wm_base.rs  xdg_surface.rs  zwlr_layer_shell_v1.rs  zwlr_layer_surface_v1.rs
wayland/src/sys/: display.rs  ffi.rs  mod.rs  object.rs  object_storage.rs  proxy.rs  proxy_registry.rs  registry.rs  wire.rs
wayland/tests/: api.rs
waywe/: Cargo.toml
waywe-converter/: Cargo.toml
waywe-converter/src/: consts.rs  lib.rs  library_folders.rs
waywe-converter/src/scene/: models.rs
waywe-converter/test-data/: libraryfolders.vdf  table_elems_test
waywe-daemon/: Cargo.toml
waywe-daemon/src/: app.rs  app_layer.rs  box_ext.rs  event.rs  event_loop.rs  main.rs  wallpaper_app.rs
waywe-daemon/src/runtime/: gpu.rs  mod.rs  shaders.rs  timer.rs  wayland.rs
waywe-daemon/src/shaders/: noop-vertex.glsl  scene-image-fragment.glsl  scene-image-vertex.glsl  scene-video-fragment.glsl  test-fragment.glsl  test-vertex.glsl  transition.glsl  video.glsl
waywe-daemon/src/wallpaper/: image.rs  image_pipeline.rs  mod.rs  test_scene.rs  transition.rs  video.rs  video_pipeline.rs
waywe-daemon/tests/: simple-wayland-client.rs  simple-wayland-server.rs  white-rect.rs
waywe-daemon/tests/shaders/: white-fragment.glsl
waywe-default-wallpapers/: Cargo.toml
waywe-default-wallpapers/src/: image.rs  lib.rs  video.rs
waywe-runtime/: Cargo.toml
waywe-runtime/src/: event.rs  frame.rs  gpu.rs  lib.rs  task_pool.rs
waywe-runtime/src/runtime/: app.rs  event.rs  gpu.rs  mod.rs  shaders.rs  task_pool.rs  wayland.rs
waywe-scene/: Cargo.toml
waywe-scene/src/: asset_server.rs  cursor.rs  extract.rs  image.rs  lib.rs  material.rs  mesh.rs  plugin.rs  render.rs  time.rs  video.rs  wallpaper.rs
waywe-scene/src/shaders/: noop-fragment.glsl  scene-image-fragment.glsl
waywe/src/: args.rs  command.rs  main.rs
(+229 files in other folders)
