[workspace]
resolver = "3"
members = [
    "deploy-tool",
    "dxt",
    "extractor",
    "project-parser",
    "runtime",
    "transmute-extra",
    "unite-json",
    "video",
    "wayland-client",
    "wayland-scanner",
    "wayland-server",
    "wayland-sys",
    "waywe",
    "waywe-daemon",
]

[workspace.package]
version = "0.0.7"
edition = "2024"
license = "MIT"
rust-version = "1.88"
authors = [
    "Varov Svyatoslav <slava-varov3@mail.ru>",
    "Alexander Filimonov <arnodarkrose@duck.com>",
]
repository = "https://www.github.com/hack3rmann/waywe-rs"

[workspace.dependencies]
wayland-client = { path = "wayland-client", features = ["smallvec"] }
wayland-server = { path = "wayland-server" }
wayland-sys = { path = "wayland-sys" }
runtime = { path = "runtime" }
transmute-extra = { path = "transmute-extra" }
thiserror = "2.0.11"
safe-transmute = "0.11.3"
rayon = "1.10.0"
orx-parallel = "3.2.0"
bitflags = "2.9.0"
tracing = "0.1.41"
static_assertions = "1.1.0"
tracing-test = "0.2.5"
paste = "1.0.15"
smallvec = { version = "1.14.0", features = ["union", "serde", "const_generics", "const_new", "write"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
glam = { version = "0.30.3", features = ["bytemuck", "serde"] }
video = { path = "video" }
rustix = { version = "0.38.44", features = ["fs", "net", "process", "mm", "shm", "event"] }
bytemuck = { version = "1.21.0", features = ["extern_crate_alloc", "derive"] }
libc = "0.2.170"
image = "0.25.6"
bincode = "2.0.1"
clap = { version = "4.5.40", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
fxhash = "0.2.1"
