[workspace]
resolver = "3"
members = [
    "crates/deploy-tool",
    "crates/dxt",
    "crates/extractor",
    "crates/project-parser",
    "crates/waywe-ipc",
    "crates/transmute-extra",
    "crates/unite-json",
    "crates/video",
    "crates/wayland-client",
    "crates/wayland-scanner",
    "crates/wayland-server",
    "crates/wayland-sys",
    "crates/waywe",
    "crates/waywe-daemon",
    "crates/waywe-default-wallpapers",
    "crates/waywe-ecs",
    "crates/waywe-ipc",
    "crates/waywe-runtime",
    "crates/waywe-scene",
    "crates/waywe-uuid",
]

[workspace.package]
version = "0.0.10"
edition = "2024"
license = "MIT"
rust-version = "1.89"
authors = [
    "Varov Svyatoslav <slava-varov3@mail.ru>",
    "Alexander Filimonov <arnodarkrose@duck.com>",
]
repository = "https://www.github.com/hack3rmann/waywe-rs"

[workspace.dependencies]
wayland-client = { path = "crates/wayland-client", features = ["smallvec"] }
wayland-server = { path = "crates/wayland-server" }
wayland-sys = { path = "crates/wayland-sys" }
waywe-ipc = { path = "crates/waywe-ipc" }
waywe-runtime = { path = "crates/waywe-runtime" }
waywe-scene = { path = "crates/waywe-scene" }
waywe-default-wallpapers = { path = "crates/waywe-default-wallpapers" }
transmute-extra = { path = "crates/transmute-extra" }
waywe-ecs = { path = "crates/waywe-ecs" }
video = { path = "crates/video" }
waywe-uuid = { path = "crates/waywe-uuid" }
thiserror = "2.0.11"
safe-transmute = "0.11.3"
rayon = "1.10.0"
orx-parallel = "3.2.0"
bitflags = "2.9.0"
tracing = "0.1.41"
static_assertions = "1.1.0"
tracing-test = "0.2.5"
paste = "1.0.15"
smallvec = { version = "1.14.0", features = ["union", "serde", "const_generics", "const_new", "write"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
glam = { version = "0.30.3", features = ["bytemuck", "serde"] }
rustix = { version = "0.38.44", features = ["fs", "net", "process", "mm", "shm", "event"] }
bytemuck = { version = "1.21.0", features = ["extern_crate_alloc", "derive"] }
libc = "0.2.170"
image = "0.25.6"
bincode = "2.0.1"
clap = { version = "4.5.40", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
fxhash = "0.2.1"
box_into_inner = "0.1.0"
futures-util = { version = "0.3.31", features = ["alloc"] }
derive_more = { version = "2.0.1", features = ["full"] }
