[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "waywe"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
runtime.workspace = true
video.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustix.workspace = true
image.workspace = true
