[package]
name = "daemon"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { version = "1.21.0", features = ["extern_crate_alloc", "derive"] }
raw-window-handle = "0.6.2"
rustix = { version = "0.38.44", features = ["fs", "net", "process"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
