[package]
name = "daemon"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck.workspace = true
raw-window-handle = "0.6.2"
rustix.workspace = true
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
wgpu = { version = "24.0.1", features = ["glsl"] }
ash = "0.38.0"
wayland-client.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
glam.workspace = true
video.workspace = true
runtime.workspace = true

[dev-dependencies]
libc = "0.2.171"
tracing-test.workspace = true
