[package]
name = "daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "waywe-daemon"
path = "src/main.rs"

[dependencies]
bytemuck.workspace = true
raw-window-handle = "0.6.2"
rustix.workspace = true
thiserror = "2.0.11"
tokio.workspace = true
wgpu = { version = "24.0.1", features = ["glsl"] }
ash = "0.38.0"
wayland-client.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
glam.workspace = true
video.workspace = true
runtime.workspace = true
bitflags.workspace = true
image.workspace = true
static_assertions.workspace = true
smallvec.workspace = true
transmute-extra.workspace = true
bincode.workspace = true
daemonize = "0.5.0"
clap.workspace = true
toml.workspace = true

[dev-dependencies]
libc = "0.2.171"
tracing-test.workspace = true
wayland-sys.workspace = true
scopeguard = "1.2.0"
