[package]
name = "unite-json"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
serde.workspace = true
serde_json = "1.0.140"
tracing.workspace = true
