[package]
name = "wayland-client"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { version = "1.21.0", features = ["extern_crate_alloc", "derive"] }
raw-window-handle = "0.6.2"
rustix = { version = "0.38.44", features = ["fs", "net", "process", "mm", "shm"] }
thiserror.workspace = true
tracing.workspace = true
bitflags = "2.8.0"
static_assertions.workspace = true
smallvec.workspace = true
glam = "0.30.0"
wayland-scanner = { path = "../wayland-scanner" }
wayland-sys.workspace = true
phf = { version = "0.11.3", features = ["macros", "phf_macros"] }
fxhash = "0.2.1"
paste.workspace = true
va_list = "0.2.0"

[dev-dependencies]
tracing-test.workspace = true
