[package]
name = "wayland-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
wayland-client.workspace = true
wayland-sys.workspace = true
tracing.workspace = true
rustix.workspace = true
thiserror.workspace = true
