[package]
name = "wayland-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
libc.workspace = true
thiserror.workspace = true
static_assertions.workspace = true
va_list = "0.2.0"
