[package]
name = "wayland"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { version = "1.21.0", features = ["extern_crate_alloc", "derive"] }
raw-window-handle = "0.6.2"
rustix = { version = "0.38.44", features = ["fs", "net", "process", "mm", "shm"] }
thiserror = "2.0.11"
tracing.workspace = true
fxhash = "0.2.1"
bitflags = "2.8.0"
static_assertions = "1.1.0"
libc = "0.2.170"
