[package]
name = "wayland"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { version = "1.21.0", features = ["extern_crate_alloc", "derive"] }
raw-window-handle = "0.6.2"
rustix = { version = "0.38.44", features = ["fs", "net", "process", "mm", "shm"] }
thiserror.workspace = true
tracing.workspace = true
bitflags = "2.8.0"
static_assertions.workspace = true
smallvec = { version = "1.14.0", features = ["const_generics", "union"] }
glam = "0.30.0"
wayland-scanner = { path = "../wayland-scanner" }
wayland-sys.workspace = true
paste = "1.0.15"
