[package]
name = "waywe-converter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chumsky = "0.10.1"
glam.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.145"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber = {workspace = true, features = ["env-filter", "fmt", "std"]}
