[package]
name = "waywe-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "waywe-daemon"
path = "src/main.rs"

[dependencies]
bytemuck.workspace = true
raw-window-handle = "0.6.2"
rustix.workspace = true
thiserror = "2.0.11"
tokio.workspace = true
wgpu = { version = "26.0.1", features = ["glsl"] }
ash = "0.38.0"
wayland-client.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
glam.workspace = true
video.workspace = true
runtime.workspace = true
bitflags.workspace = true
image.workspace = true
static_assertions.workspace = true
smallvec.workspace = true
transmute-extra.workspace = true
bincode.workspace = true
daemonize = "0.5.0"
clap.workspace = true
toml.workspace = true
wayland-server.workspace = true
fxhash.workspace = true
for-sure = "0.1.1"
reusable-box = "0.1.0"
bevy_ecs = "0.16.1"
derive_more = { version = "2.0.1", features = ["full"] }
itertools = "0.14.0"

[dev-dependencies]
libc = "0.2.171"
tracing-test.workspace = true
wayland-sys.workspace = true
scopeguard = "1.2.0"
