[package]
name = "waywe-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
wgpu = { version = "26.0.1", features = ["glsl"] }
ash = "0.38.0"
glam.workspace = true
waywe-ipc.workspace = true
for-sure = "0.1.1"
raw-window-handle = "0.6.2"
bitflags.workspace = true
smallvec.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytemuck.workspace = true
fxhash.workspace = true
reusable-box = "0.1.0"
rustix.workspace = true
thiserror.workspace = true
box_into_inner.workspace = true
video.workspace = true
wayland-client.workspace = true
futures-util.workspace = true
