[package]
name = "waywe"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "waywe"
path = "src/main.rs"

[dependencies]
clap.workspace = true
waywe-ipc.workspace = true
video.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustix.workspace = true
image.workspace = true
transmute-extra.workspace = true
glam.workspace = true
thiserror.workspace = true
anyhow = "1.0.99"
