[package]
name = "extractor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true


[[bin]]
name = "waywe-extract"
path = "src/main.rs"


[dependencies]
safe-transmute.workspace = true
thiserror.workspace = true
bitflags.workspace = true
transmute-extra = {path = "../transmute-extra"}
dxt = {path = "../dxt"}
lz4 = "1.28.1"
image = "0.25.5"
tracing.workspace = true
clap = { version = "4.5.37", features = ["derive"] }
anyhow = "1.0.98"
png = "0.17.16"
