[package]
name = "video"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ffmpeg-sys-next = { version = "7.1.3", features = ["build-vaapi"] }
glam.workspace = true
bitflags.workspace = true
thiserror.workspace = true
static_assertions.workspace = true
