[package]
name = "waywe-default-wallpapers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
waywe-ecs.workspace = true
waywe-scene.workspace = true
derive_more.workspace = true
image.workspace = true
