[package]
name = "waywe-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustix.workspace = true
thiserror.workspace = true
bincode.workspace = true
tracing.workspace = true
bytemuck.workspace = true
smallvec.workspace = true
libc.workspace = true
glam.workspace = true
serde.workspace = true
toml.workspace = true
rand = "0.9.1"
