[package]
name = "waywe-uuid-derive"
version = "0.1.2"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
edition = "2018"

description = "Custom derive for the type-uuid crate"
documentation = "https://docs.rs/type-uuid"
repository = "https://github.com/randomPoison/type-uuid"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.99", features = ["full", "extra-traits"] }
quote = "1.0"
uuid = "1.18.1"
proc-macro2 = "1.0"
rand = "0.9.2"
